TEST_PROGRAMS/VALID/09/funccall.go
package funcall

func main() {
    a()
    ((((v))))()
    f(1,3,4)
}
