TEST_PROGRAMS/INVALID/15/weeding2.go
package error

func f(){
    1
}
